<resources>
    <string name="app_name">planner planter</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    
    <string-array name="languages">
        <item>english</item>
        <item>chinese</item>
        <item>hindi</item>
        <item>japanese</item>
    </string-array>

    <string name="plan_t">plan(t)</string>
    <string name="calendar">calendar</string>
    <string name="plant">plant</string>
    <string name="make_task">make task</string>
    <string name="view_tasks">view tasks</string>
    <string name="mark_as_complete">mark as complete</string>
    <string name="add_task">add task</string>
    <string name="view_today_s_tasks">View Today\'s Tasks</string>
    <string name="shop">shop</string>
    <string name="back">back</string>
    <string name="_5_coin">5 coin</string>
    <string name="_1_coin">1 coin</string>

</resources>
